Final Commit Menu

--- a/Our Menu/index.html
+++ b/Our Menu/index.html
@@ -19,16 +19,22 @@
         <div class="underline"></div>
       </div>
       <!--filter buttons-->
+      <div class="btn-container">
+        <button class="filter-btn" type="button" data-id="all">all</button>
+        <button class="filter-btn" type="button" data-id="breakfast">BreakFast/button>
+        <button class="filter-btn" type="button" data-id="lunch">Lunch</button>
+        <button class="filter-btn" type="button" data-id="shakes">Shakes</button>
+      </div>
       <div class="section-center">
         <!-- Single items -->
         <article class="menu-item">
-          <img src="menu-item.jpeg" class="phote" alt="Menu Item">
+          <img src="menu-item.jpeg" class="photo" alt="Menu Item">
           <div class="item-info">
             <header>
               <h4>Butter Milk</h4>
               <h4 class="price">$15</h4>
             </header>
-            
+            <p>Lorem, ipsum dolor sit amet atis quibusdam temporibus, possimus tempore? Exercitationem, minus maxime.</p>
           </div>
         </article>
       </div>
