--- a/Video Project/index.html
+++ b/Video Project/index.html
@@ -9,12 +9,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!--  -->
-    <video class="video-container" controls muted autoplay loop>
-      <source src="./video.mp4" type="video/mp4">
-    </video>
-    <h1>video project</h1>
-
+    <!--PreLoader-->
+    <div class="preloader">
+      <img src="./preloader.gif" alt="">
+    </div>
+    <header>
+      <video class="video-container" muted autoplay loop>
+        <source src="./video.mp4" type="video/mp4">
+      </video>
+      <h1>video project</h1>
+      <button class="switch-btn">
+        <span>Play</span>
+        <span>Pause</span>
+        <span class="switch"></span>
+      </button>
+    </header>
     <script src="app.js"></script>
   </body>
 </html>
