--- a/Scroll Project/index.html
+++ b/Scroll Project/index.html
@@ -61,7 +61,7 @@
     </div>
   </section>
   <footer class="section">
-    <p>copyright &copy; backroads travel tours company <span>2020</span>.all right reserved</p>
+    <p>copyright &copy; backroads travel tours company <span id="date"></span>.all right reserved</p>
     
     
   </footer>
