--- a/CountDown/index.html
+++ b/CountDown/index.html
@@ -9,7 +9,44 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="">
+      </article>
+      <article class="gift-info">
+        <h3>Old iphone giveaway</h3>
+        <h4 class="giveaway">
+          giveaway ends on Sunday, 10 November 2020
+        </h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto maiores aliquid eligendi labore quisqua</p>
+        <div class="deadline">
+          <div class="deadline-format">
+            <div>
+              <h4 class="day">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <div class="deadline-format">
+            <div>
+              <h4 class="mins">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <div class="deadline-format">
+            <div>
+              <h4 class="secs">34</h4>
+              <span>seconds</span>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
