--- a/Grocery Store/index.html
+++ b/Grocery Store/index.html
@@ -14,7 +14,26 @@
   </head>
   <body>
     <section class="section-center">
-      <form action="" class="grocery-form"></form>
+      <form action="" class="grocery-form">
+        <p class="alert"></p>
+        <h3>grocery store</h3>
+        <div class="form-control">
+          <input type="text" id="grocery" placeholder="e.g. eggs">
+          <button type="submit" class="submit-btn">submit</button>
+        </div>
+      </form>
+      <div class="grocery-container">
+        <div class="grocery-list">
+          <article class="grocery-item">
+            <p class="title">item</p>
+            <div class="btn-container">
+              <button type="button" class="edit-btn"><i class="fas fa-edit"></i></button>
+              <button type="button" class="delete-btn"><i class="fas fa-trash"></i></button>
+            </div>
+          </article>
+        </div>
+        <button type="button" class="clear-btn">clear items</button>
+      </div>
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
